# coop-produce

./: .gitignore  CLAUDE.md  index.html  pull_prices.py  pyproject.toml  requirements.txt
.github/workflows/: update-prices.yml
src/coop/: __init__.py  config.py  pull_prices.py
src/coop/templates/: produce_list_template.html
