[project]
name = "coop"
version = "0.1.0"
description = "Food Co-op Price Scraper"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12.3",
    "requests==2.32.3",
    "pandas==2.2.2",
    "lxml==5.3.0",
    "ipython==8.26.0",
    "mypy==1.9.0",
    "types-requests==2.31.0.20240311",
    "pandas-stubs==2.2.1.240316",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/coop"]

[tool.hatch.build]
only-packages = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true 